--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "mdbsvelte": "^1.0.12",
+    "plotly.js-dist": "^2.8.3",
     "sirv-cli": "^1.0.0",
+    "svelte-chartjs": "^1.1.2",
     "sveltestrap": "^5.6.3"
   }
 }
